--- a/Inicio/Inicio.css
+++ b/Inicio/Inicio.css
@@ -53,3 +53,19 @@
     color: #0AF747;
 }
 
+.tipeo{
+    color: #0AF747;
+}
+
+
+
+.full-height {
+    min-height: 60vh;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    border-bottom: 2px solid rgba(255,255,255, 0.1);
+}
