--- a/Inicio/Inicio.css
+++ b/Inicio/Inicio.css
@@ -51,6 +51,7 @@
     color: #0BE312;
 }
 
+
 /* INICIO */
 
 .full-height {
@@ -62,6 +63,7 @@
     padding-top: 80px;
     padding-bottom: 80px;
     margin-left: 150px;
+
 }
 
 .full-heightt {
@@ -74,3 +76,9 @@
     padding-bottom: 80px;
     margin-left: 150px;
 }
+
+span{
+    font-size: 50px;
+}
+
+/* tecnologias */
