--- a/Inicio/Inicio.css
+++ b/Inicio/Inicio.css
@@ -83,3 +83,18 @@ span{
 
 
 /* tecnologias */
+
+
+
+/* footer */
+
+.logo {
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+    
+}
+
+.footer {
+    text-align: center;
+}
