--- a/Contacto/contacto.css
+++ b/Contacto/contacto.css
@@ -89,3 +89,18 @@
 #contacto input.form-control{
     height: 44px;
 }
+
+
+/* footer */
+
+.logo {
+  width: 30px;
+  height: 30px;
+  margin-left: 10px;
+  
+}
+
+.footer {
+  text-align: center;
+  margin-top: 100px;
+}
