--- a/Inicio/Inicio.css
+++ b/Inicio/Inicio.css
@@ -30,20 +30,26 @@
 }
 
 /* navbar */
-
+ 
 .header{
     background-color: #EBE6E5;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     height: 85px;
     padding: 5px 10%;
+    position:fixed;
+	z-index:1000;
+    width:100%;
 }
 
+
 .header .logo img{
-    height: 70px;
+    height: 30px;
     width: auto;
+    
 }
+
 
 .header .nav-links{
     list-style: none;
@@ -56,10 +62,13 @@
 
 .header .nav-links a{
     font-size: 700;
-    color: #0AF747;
+    color: #ffff;
     text-decoration: none;
 }
 
+.header .nav-links li a:hover{
+    color: #0AF747;
+}
 
 
 /* Estilos para el modo claro */
@@ -115,5 +124,7 @@ span{
 
 
 /* tecnologias */
+
+
 
 
