--- a/Contacto/contacto.css
+++ b/Contacto/contacto.css
@@ -22,75 +22,6 @@
   width: 100%;
 }
 
-.luz {
-  float: left;
-  width: 40%;
-  margin-left: 100px;
-  
-}
-
-
-/* Estilos para el modo claro */
-.modo-claro {
-  background-color: white;
-  color: #363434;
-}
-
-/* Estilos para el modo oscuro */
-.modo-oscuro {
-  background-color: #363434;
-  color: white;
-}
-
-.nav-link{
-  color: #0AF747;
-}
-
-
-.tipeo{
-  color: #0AF747;
-}
-
-/* Estilo de formulario */
-
-.btn {
-    padding: 12px 28px;
-    font-weight: 700;
-}
-
-.btn-brand {
-    background-color: #138C0F;
-    border-color: black;
-    color: yellow;
-}
-
-.btn-brand:hover,
-.btn-brand:focus {
-    background-color: green;
-    color: yellow;
-    border-color: #0AF747;
-}
-
-#contacto .form-control {
-    background-color: white;
-    border-color: #138C0F;
-    color: blueviolet;
-}
-
-#contacto .form-control:focus{
-    border-color: #0AF747;
-    box-shadow: none;
-}
-
-#contacto .form-control::placeholder{
-    color: darkgreen;
-}
-
-#contacto input.form-control{
-    height: 44px;
-}
-
-
 /* footer */
 
 .logo {
@@ -103,4 +34,47 @@
 .footer {
   text-align: center;
   margin-top: 100px;
+}
+
+/* navbar */
+ 
+.header{
+  background-color: #fff;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 70px;
+  padding: 5px 10%;
+  position:fixed;
+z-index:1000;
+  width:100%;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.header .logo img{
+  height: 30px;
+  width: auto;
+}
+
+.wrapper {
+  margin-right: auto;
+}
+
+.header .nav-links{
+  list-style: none;
+}
+
+.header .nav-links li{
+  display: inline-block;
+  padding: 0 20px;
+}
+
+.header .nav-links a{
+  font-size: 24px;
+  color: #000;
+  text-decoration: none;
+}
+
+.header .nav-links li a:hover{
+  color: #0AF747;
 }
