--- a/Proyectos/proyectos.css
+++ b/Proyectos/proyectos.css
@@ -61,6 +61,7 @@
   height: 70px;
   padding: 5px 10%;
   position:fixed;
+  z-index: 100;
   width:100%;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -91,4 +92,18 @@
 
 .header .nav-links li a:hover{
   color: #0AF747;
+}
+
+
+
+
+/* */
+.full-height {
+  min-height: 76vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
