--- a/SobreMi/sobremi.css
+++ b/SobreMi/sobremi.css
@@ -54,6 +54,32 @@
   color: #0AF747;
 }
 
+/* tecnologias */
+.full-height {
+  min-height: 76vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.card-img-top {
+  height: 200px; /* Establece la altura deseada para las imágenes */
+  object-fit: cover; /* Ajusta el tamaño de la imagen sin deformarla */
+  width: 100%; /* Ajusta el ancho de la imagen para que ocupe el contenedor */
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  z-index: 1;
+}
+
+.card {
+  margin-bottom: 20px;
+}
+
 /* footer */
 
 .logo {
