--- a/SobreMi/sobremi.css
+++ b/SobreMi/sobremi.css
@@ -34,6 +34,7 @@
   height: 70px;
   padding: 5px 10%;
   position:fixed;
+  z-index: 1000;
   width:100%;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -65,6 +66,7 @@
   padding-bottom: 80px;
 }
 
+/* sobre mi */
 .subtitle{
   color: #0AF747;
   margin: 0 50px;
@@ -74,9 +76,10 @@
   margin: 10px 80px
 }
 
-
-
-
+/* tecnologias */
+.row{
+  margin: 0 50px;
+}
 /* footer */
 
 .logo {
