--- a/Proyectos/proyectos.css
+++ b/Proyectos/proyectos.css
@@ -8,17 +8,19 @@
 .link-custom::after {
   content: "";
   width: 0%;
+  margin-top: 4px;
   height: 2px;
   background-color: #0AF747;
   position: absolute;
   left: 0;
   top: 90%;
   transition: all 0.4s;
-}
 
+}
+/*
 .my-list {
   margin-top: 15px !important;
-}
+}*/
 
 .link-custom:hover::after {
   width: 100%;
@@ -34,6 +36,7 @@
   padding: 5px 10%;
   position:fixed;
   width:100%;
+  z-index: 9999;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
@@ -52,6 +55,67 @@
 .header .nav-links li a:hover{
   color: #0AF747;
 }
+
+/**/
+
+
+dl, ol, ul {
+  margin:0;
+}
+
+
+
+.nav > #nav-check {
+    display: none;
+}
+@media (max-width: 780px) {
+  .nav {
+    padding: 1rem;
+    
+  }
+  .nav > .nav-btn {
+    display: inline-block;
+    right: 0;
+    top: 0;
+    padding-top: 0.2rem;
+  }
+  .nav > .nav-btn > label {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    padding: 13px;
+  }
+  .nav > .nav-btn > label > span {
+    display: block;
+    width: 25px;
+    height: 10px;
+    border-top: 2px solid ;
+  }
+  .nav > .nav-list {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    height: 0;
+    transition: all 0.3s ease-in;
+    top: 60px;
+    left: 0;
+    overflow: hidden;
+    background-color: #fff;
+  }
+
+  .nav > .nav-list > li {
+    width: 100%;
+    margin-top: 1.5rem;
+  }
+  .nav > #nav-check:checked ~ .nav-list {
+    height: calc(40vh - 50px);
+  }
+
+  
+}
+
 
 
 /* Proyecto */
@@ -83,6 +147,8 @@
   position: relative;
   margin: 25%;
 }
+
+
 .link::after {
   content: "";
   width: 0%;
