--- a/Proyectos/proyectos.css
+++ b/Proyectos/proyectos.css
@@ -176,4 +176,9 @@
   .proyectos-section {
     transition: height 0.5s ease;
   }
+
+  .proyectos-section__grid {
+    max-width: 19rem;
+    max-height: 20rem;
+  }
 }
